--- a/requirements.txt
+++ b/requirements.txt
@@ -6,10 +6,12 @@ click==8.2.1
 dnspython==2.7.0
 feedparser==6.0.11
 Flask==3.1.1
+gunicorn==23.0.0
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.2
+packaging==25.0
 pymongo==4.13.2
 requests==2.32.4
 sgmllib3k==1.0.0
